added EventHandler interface for handling XEvents added .idea directory to gitignore Clipboard Stack class introduced, at the moment just tries to take ownership of the clipboard selection on initialisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(ClipboardStack)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp ClipboardStack.cpp PastePopListener.cpp QuitListener.cpp)
 
 link_libraries(X11)
 
 add_executable(ClipboardStack ${SOURCE_FILES})
+
+SET(CMAKE_CXX_FLAGS "-std=c++0x")
