--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(ClipboardStack)
 
-set(SOURCE_FILES main.cpp ClipboardStack.cpp PastePopListener.cpp QuitListener.cpp)
+set(SOURCE_FILES main.cpp X11ClipboardAdapter.cpp PastePopListener.cpp QuitListener.cpp ClipboardStack.cpp)
 
 link_libraries(X11)
 
